[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Levels/LevelTransition.gd" type="Script" id=1]
[ext_resource path="res://Art/Environment/Escalator.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Environment/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Environment/Barrier.png" type="Texture" id=4]
[ext_resource path="res://Art/Environment/WallExtension.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 758.713, 62.6478 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 175.118 )

[sub_resource type="Animation" id=3]

resource_name = "CloseRight"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Barriers/Barrier2:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 72, 0 ), Rect2( 0, 0, 72, 310 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Barriers/Barrier2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1282.51, 491.164 ), Vector2( 1282.51, 341.523 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Barriers/Barrier:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 72, 300 ), Rect2( 0, 0, 72, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Barriers/Barrier:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 38.2323, 343.95 ), Vector2( 38.2323, 493.036 ) ]
}

[node name="LevelTransition" type="Position2D" index="0"]

script = ExtResource( 1 )
end_of_level = false

[node name="Center" type="Position2D" parent="." index="0"]

position = Vector2( 609.136, 342.154 )

[node name="Escalator" type="Sprite" parent="Center" index="0"]

scale = Vector2( 0.797433, 1 )
z_index = -11
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 300 )
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[node name="Area2D" type="Area2D" parent="Center" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center/Area2D" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Walls" type="Position2D" parent="." index="1"]

editor/display_folded = true

[node name="Wall" parent="Walls" index="0" instance=ExtResource( 3 )]

position = Vector2( 39.977, -308.381 )
rotation = 1.5708
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Wall3" parent="Walls" index="1" instance=ExtResource( 3 )]

position = Vector2( 1281.74, -306.33 )
rotation = -1.5708
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Wall7" parent="Walls" index="2" instance=ExtResource( 3 )]

position = Vector2( 577.559, 157.639 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Wall9" parent="Walls" index="3" instance=ExtResource( 3 )]

position = Vector2( 577.708, 528.806 )
rotation = 3.14159
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Wall8" parent="Walls" index="4" instance=ExtResource( 3 )]

position = Vector2( 745.686, 157.729 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Wall10" parent="Walls" index="5" instance=ExtResource( 3 )]

position = Vector2( 745.834, 528.895 )
rotation = 3.14159
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Wall2" parent="Walls" index="6" instance=ExtResource( 3 )]

position = Vector2( 39.5766, 989.961 )
rotation = 1.5708
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Wall4" parent="Walls" index="7" instance=ExtResource( 3 )]

position = Vector2( 1281.34, 992.011 )
rotation = -1.5708
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Target" type="Position2D" parent="." index="2"]

position = Vector2( 740.906, 345 )
_sections_unfolded = [ "Transform" ]

[node name="LeftWall" type="StaticBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 11.5856, 345.445 )
input_pickable = false
collision_layer = 8
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall" index="0"]

shape = SubResource( 2 )

[node name="RightWall" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 1309.57, 349.316 )
input_pickable = false
collision_layer = 8
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall" index="0"]

shape = SubResource( 2 )

[node name="Barriers" type="Position2D" parent="." index="5"]

editor/display_folded = true

[node name="Barrier" type="Sprite" parent="Barriers" index="0"]

position = Vector2( 38.2323, 343.95 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 72, 300 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Barrier2" type="Sprite" parent="Barriers" index="1"]

position = Vector2( 1282.51, 491.164 )
texture = ExtResource( 4 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 72, 0 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/CloseRight = SubResource( 3 )
anims/OpenLeft = SubResource( 4 )
blend_times = [  ]

[node name="WallExtension" type="Sprite" parent="." index="7"]

position = Vector2( 661.716, -99.0511 )
scale = Vector2( 9.12042, 6.62554 )
texture = ExtResource( 5 )

[node name="WallExtension2" type="Sprite" parent="." index="8"]

position = Vector2( 661.193, 785.45 )
scale = Vector2( 9.12042, 6.62554 )
texture = ExtResource( 5 )

[node name="TransitionTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="SafetyNetTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false


